package dsbproto.domain_controller;

import "model.proto";


message SlaveTypeInfo
{
    required model.SlaveTypeDescription description = 1;
    repeated string provider = 2;
}

message SlaveTypeList
{
    repeated SlaveTypeInfo slave_type = 1;
}
